# AI-Reader-V2

./: .gitignore  README.md
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
backend/: ai-reader-sidecar.spec  pyproject.toml  sidecar_entry.py
backend/src/api/routes/: analysis.py
backend/src/db/: novel_store.py  sqlite_db.py
backend/src/extraction/: chapter_fact_extractor.py  fact_validator.py  synopsis_generator.py
backend/src/infra/: llm_client.py
backend/src/models/: chapter_fact.py
backend/src/services/: conflict_detector.py  embedding_service.py  geo_resolver.py  map_layout_service.py  visualization_service.py
backend/src/utils/: chapter_splitter.py
frontend/: index.html  package-lock.json  package.json
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: demoDataAdapter.ts  demoNovelMap.ts  types.ts
frontend/src/app/: DemoContext.tsx  DemoLayout.tsx  DesktopLayout.tsx  router.tsx
frontend/src/desktop/: BookshelfPage.tsx
frontend/src/pages/: ConflictsPage.tsx  MapPage.tsx  SettingsPage.tsx
landing/: _redirects  _worker.js  demo-spa.html  index.html  styles.css
landing/demo/: index.html
landing/demo/assets/: AnalysisPage-BAHE2Cge.js  AnalysisPage-BXgcXpTl.js  AnalysisPage-Bp5k69cl.js  AnalysisPage-xCaMZk8L.js  BookshelfPage-C2B47iFU.js  BookshelfPage-CIif8h8n.js  BookshelfPage-CWFXVdJ_.js  BookshelfPage-CmwQn92t.js  ChatPage-B8CX3OKF.js  ChatPage-CkcLFlvF.js  ChatPage-Dw5JypAk.js  ChatPage-i5kczko-.js  ConflictsPage-0jM-1dSV.js  (+131 more)
scripts/: export_demo_data.py
(+14 files in other folders)
